--- a/myst.yml
+++ b/myst.yml
@@ -2,7 +2,7 @@
 version: 1
 project:
   title: 'Jupyter Book: Blog'
-  description: Team compass and documentation about governance for the Jupyter Book and MyST Markdown communities.
+  description: Updates from the Jupyter Book subproject.
   keywords:
     - Jupyter
     - JupyterBook
@@ -12,11 +12,6 @@ project:
   license: CC0-1.0
   toc:
     - file: index.md
-    - file: team.md
-    - file: governance.md
-    - file: tips.md
-    - file: contribute.md
-    - file: code-of-conduct.md
 site:
   template: book-theme
   nav: []
