--- a/myst.yml
+++ b/myst.yml
@@ -24,4 +24,4 @@ site:
     favicon: images/favicon.png
     logo: images/logo-wide.svg
     logo_dark: images/logo-wide-dark.svg
-    logo_text: Team Compass
+    logo_text: Blog
