--- a/myst.yml
+++ b/myst.yml
@@ -3,12 +3,14 @@ version: 1
 extends:
   - https://raw.githubusercontent.com/jupyter-book/meta/refs/heads/main/myst.yml
 project:
-  title: 'Jupyter Book: Blog'
+  title: "Jupyter Book: Blog"
   description: Updates from the Jupyter Book subproject.
   keywords:
     - Jupyter
     - JupyterBook
     - MyST Markdown
+  references:
+    jpy-gov: https://jupyter.org/governance/
   github: https://github.com/jupyter-book/blog
   # To autogenerate a Table of Contents, run "myst init --write-toc"
   license: CC0-1.0
