--- a/myst.yml
+++ b/myst.yml
@@ -9,6 +9,12 @@ project:
     - Jupyter
     - JupyterBook
     - MyST Markdown
+  authors:
+    - name: Angus Hollands
+      orcid: 0000-0003-0788-3814
+      affiliations:
+        - Jupyter Book
+        - 2i2c
   references:
     jpy-gov: https://jupyter.org/governance/
   github: https://github.com/jupyter-book/blog
