--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "glob": "^11.0.0",
-    "myst-transforms": "^1.3.27"
+    "myst-transforms": "^1.3.27",
+    "mystmd": "^1.3.17"
   }
 }
