--- a/myst.yml
+++ b/myst.yml
@@ -39,6 +39,7 @@ project:
         - Curvenote
   references:
     jpy-gov: https://jupyter.org/governance/
+    guide: https://mystmd.org/guide
   github: https://github.com/jupyter-book/blog
   # To autogenerate a Table of Contents, run "myst init --write-toc"
   license: CC0-1.0
