--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "ISC",
   "devDependencies": {
     "glob": "^11.0.0",
-    "myst-transforms": "^1.3.27",
+    "myst-transforms": "^1.3.33",
+    "myst-frontmatter": "^1.7.10",
     "mystmd": "^1.3.17"
   }
 }
