fix: use IDs for authors

--- a/myst.yml
+++ b/myst.yml
@@ -11,28 +11,33 @@ project:
     - Jupyter
     - JupyterBook
     - MyST Markdown
-  authors:
-    - name: Angus Hollands
+  contributors:
+    - id: agoose77
+      name: Angus Hollands
       orcid: 0000-0003-0788-3814
       affiliations:
         - Jupyter Book
         - 2i2c
-    - name: Chris Holdgraf
+    - id: choldgraf
+      name: Chris Holdgraf
       orcid: 0000-0002-2391-0678
       affiliations:
         - Jupyter Book
         - 2i2c
-    - name: Rowan Cockett
+    - id: rowanc1
+      name: Rowan Cockett
       orcid: 0000-0002-7859-8394
       affiliations:
         - Jupyter Book
         - Curvenote
-    - name: Franklin Koch
+    - id: fwkoch
+      name: Franklin Koch
       orcid: 0000-0002-6393-7058
       affiliations:
         - Jupyter Book
         - Curvenote
-    - name: Steve Purves
+    - id: stevejpurves
+      name: Steve Purves
       orcid: 0000-0002-0760-5497
       affiliations:
         - Jupyter Book
