--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build HTML Assets
-        run: myst build --html
+        run: myst build --html -d
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
