--- a/myst.yml
+++ b/myst.yml
@@ -49,6 +49,7 @@ project:
     jpy-gov: https://jupyter.org/governance/
     guide: https://mystmd.org/guide
     compass: https://compass.jupyterbook.org
+    jb2-paper: https://proceedings.scipy.org/articles/hwcj9957
   github: https://github.com/jupyter-book/blog
   # To autogenerate a Table of Contents, run "myst init --write-toc"
   license: CC0-1.0
