--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,8 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+      # BLOG_SYNC_TOKEN is a PAT for @choldgraf that expires after a year
+      # It has write access to the jupyter-book/jupyter-book repo
       - name: Sync to jupyter-book blog branch (prototype)
         uses: cpina/github-action-push-to-another-repository@main
         env:
