--- a/docs/myst.yml
+++ b/docs/myst.yml
@@ -1,7 +1,7 @@
 # See docs at: https://mystmd.org/guide/frontmatter
 version: 1
 extends:
-  - https://raw.githubusercontent.com/jupyter-book/jupyter-book/refs/heads/main/docs/_site/site.yml
+  - ./site.yml
   - ./authors.yml
 project:
   title: "Jupyter Book: Blog"
