--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,10 @@
   publish = "docs/_build/html"
   environment = { PYTHON_VERSION = "3.12" }
   command = """
-    # Build with the latest published mystmd release
-    # (Release notes generation via gh is skipped in Netlify; run locally if needed)
+    pip install pyyaml && \
+    python src/download_nav_items.py && \
     npm install -g mystmd@latest && \
-    cd docs &&myst build --html -d
+    cd docs && myst build --html -d
   """
 
 # Keep all deploy contexts out of search indexing because we use github actions for the live site
