--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,10 @@
 [build]
   publish = "docs/_build/html"
   environment = { PYTHON_VERSION = "3.12" }
+  # We do not test the release notes download because it depends on `gh`, and we don't have auth in netlify
   command = """
     pip install pyyaml && \
     python src/download_nav_items.py && \
-    python src/generate_release_notes.py && \
     npm install -g mystmd@latest && \
     cd docs && myst build --html -d
   """
